--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
+    "deepclone": "^1.0.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
+    "html2pdf.js": "^0.10.1",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-global-loading": "^1.0.11",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
+    "react-spinners": "^0.13.8",
     "react-type-animation": "^3.2.0",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
