--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.10",
     "deepclone": "^1.0.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
@@ -34,7 +35,8 @@
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.5"
+    "typescript": "5.1.5",
+    "webpack": "^5.90.3"
   },
   "devDependencies": {
     "@types/react-vertical-timeline-component": "^3.3.3"
