--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-spinners": "^0.13.8",
     "react-type-animation": "^3.2.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "react-youtube": "^10.1.0",
     "resend": "^0.16.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5",
